--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Ajouter une LICENCE, README et INSTALLATION
+
 Exporter vers MySQL
   ++ attention aux classes (certaines notions ne sont plus différentiables en base)
 Relire depuis MySQL
@@ -71,3 +73,40 @@ Recherche d'une chaîne spéciale, indépendemment des tokens
     Capitalisation des valeurs trouvées (via une base? ) 
     Sélection de différents types de token trouvés
 
+
+
++ (XT)ML protection function usage
++ (XT)ML unprotection function usage
++ @ operator usage
++ Comments usage
++ Constante usage
++ Constants defintions (define(X, 2);)
++ Debugging functions usage
++ echo and print usage
++ eval() usage
++ File inclusions
++ Global variable usage
++ header() usage
++ Liste of classes definition
++ Liste of empty function definition
++ Liste of function definition
++ Massive variable creation
++ native function for dir manipulation
++ native function for file manipulation
++ Nested loops
++ PHP configuration function usage
++ PHP native function usage
++ Regex usage (pcre, ereg)
++ Script interruption with (die, exit)
++ Script mail usage
++ SQL queries lists
++ SQL queries protections
++ Superglobal variables usage
++ System function usage (exec, shell_exec, system)
++ Upper case variables
++ URL manipulations
++ User functions usage
++ Utilisation des fonctions de gestion de fichiers
++ Variable affectations (type : $x = 2;)
++ variable variables usage
++ Variables being used
