--- a/auditeur/TODO
+++ b/auditeur/TODO
@@ -3,6 +3,7 @@ Corriger les globales (rachatco en a!)
 Résoudre les codes pour les inclusions 
 supprimer rendu 
 Exporter vers un ODT.
+Faire un arbre des relations entre fonctions
 Identifier les fonctions recursives
 fonctions sans return
 comparaison inutiles
