--- a/TODO
+++ b/TODO
@@ -154,6 +154,7 @@ Display dots when processing analyzers (auditeur)
 
 Detect multiple definitions of functions/classes (things that should be there only once : how can we process that then?)
 Detect missing elements in classes (like methods, properties, etc)
+Make a array of function (are they defined? at what level?)
 
 Add INI in the PHPFilter class of the tokenizer.
 List open-ended inclusions (including files that we don't know about)
@@ -161,7 +162,7 @@ List open-ended inclusions (including files that we don't know about)
 Liste of type variable we might guess.
 
 Variable that never gets affected (is this register_globals?)
-Long list of parameters
+Long list of parameters (called or defined...)
 Long list of public methods
 Add multi-processing for tokenizeur/auditeur (should be easy, given the task are all concurrent and distinct)
 
@@ -199,3 +200,6 @@ Add support for a version of Cornac (checking for config files, tables configura
 Make auditeur i18n easily (export in external file, auto-adding new titles)
 
 Add a log to check SQL length and optimize the bad queries 
+
+Long functions
+Compromised variables
