--- a/README
+++ b/README
@@ -18,6 +18,7 @@ Current version is DEV.
 Pre-requisite : 
 PHP 5.3.1 (only tested on that version).
 MySQL (should work on any version)
+xdebug is used for certain debug display. 
 
 This software is released under PHP licence (3.01)
 Code base is copyright (c) Damien Seguy (damien.seguy@gmail.com)
