--- a/README
+++ b/README
@@ -1,24 +1,43 @@
 Cornac : PHP Code Analyzer
 
-Usage : 
-Create application.ini in ini folder, with correct MySQL access
-./tokenizeur.php -d [code root] -r -g mysql,cache -I <application>.ini
-./auditeur.php <application>
+Copyright 2010 Matthew Burton, http://matthewburton.org
+Code by Burton and Joshua Knowles, http://auscillate.com 
 
-to extract the information : 
-1) install web/index.php on your web root
-  - change database access
-  - change prefixe to the one used in .ini  : $prefixe = 'tu';
-  - direct you browser on the index.php 
-2) use the lecture_module.php file (-h for help)
-3) go in the database, read the tables
+This software is part of the Open Source Cornac Project. 
+
+Cornac is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+License for more details.
+
+Usage : 
+
+1) Create [application].ini in ini folder, by duplicating cornac.ini
+    Check the first section, that should be enough. 
+
+2) at the root of cornac folder, run this command : 
+./cornac.php -I [application]
+
+3) Stand by ... some (probably) long time. 
+
+4) When cornac says 'Done' : 
+ a) go in your destination directory, HTML version will be there, staring with index.html
+ b) link (ln -s) you web root to the 'web' directory in cornac, and then,
+    point your browser to the good path (http://localhost/web) : 
+    All should be there
+ c) cd to auditeur, run ./inventaire.php and open the resulting .ods with Open Office
+ 
+ 
+May be of interest :
++ scripts/tags.php : a way to tags comments in the code
++ scripts/file2png.php : a way to represent file system as PNG file
 
 Current version is DEV. 
 
 Pre-requisite : 
-PHP 5.3.1 (only tested on that version).
-MySQL (should work on any version)
-xdebug is used for certain debug display. 
++ PHP 5.3.1 (only tested on that version, may work somewhere else).
++ MySQL (should work on any version), or SQLite (not currently tested)
++ xdebug is used for certain debug display. 
 
 This software is released under PHP licence (3.01)
 Code base is copyright (c) Damien Seguy (damien.seguy@gmail.com)
